# fenics22-tutorial

./: .buildinfo  .gitignore  Abs(u).html  Dockerfile  LICENSE  README.md  _config.yml  _toc.yml  access.html  access.md  beam.html  comparing_elements.html  comparing_elements.ipynb  comparing_elements.py  example.html  example.ipynb  example.py  examples.html  genindex.html  heat_eq.html  heat_eq.ipynb  heat_eq.py  helmholtz.html  helmholtz.ipynb  helmholtz.py  intro.html  intro.md  jupyter_server_config.py  mesh.html  mesh_generation.py  objects.inv  presentation-comparing_elements.html  presentation-example.html  presentation-heat_eq.html  presentation-helmholtz.html  pyproject.toml  references.bib  search.html  searchindex.js  setup.cfg  (+2 more)
.github/workflows/: build_and_publish.yml  test-build.yml
_sources/: access.md  comparing_elements.ipynb  example.ipynb  heat_eq.ipynb  helmholtz.ipynb  intro.md
_sources/part1/: example.ipynb  heat_eq.ipynb
_sources/part2/: helmholtz.ipynb
_sources/part3-stokes/: comparing_elements.ipynb
html/: comparing_elements.html  helmholtz-.html  helmholtz.html
part1/: example.html  example.ipynb  example.py  heat_eq.html  heat_eq.ipynb  heat_eq.py
part2/: domain.py  helmholtz.html  helmholtz.ipynb  helmholtz.py  mesh_gen.py  mesh_generation.py
part3/: comparing_elements.html  comparing_elements.ipynb  comparing_elements.py
part3-stokes/: comparing_elements.html  comparing_elements.ipynb  comparing_elements.py
